add main functionality

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Synced Video Playback</title>
   </head>
   <body>
-    <h1>Hello from hexiangskrrr.github.io</h1>
+    <input type="file" id="videoFiles" multiple accept="video/*" />
+    <button id="openTabs">Open Tabs</button>
+    <script src="main.js"></script>
   </body>
 </html>
