fix javascript file naming

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <input type="file" id="videoFiles" multiple accept="video/*" />
     <button id="openTabs">Open Tabs</button>
-    <script src="main.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
