--- a/tab.html
+++ b/tab.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-HM6X9KXNFT"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-HM6X9KXNFT");
+    </script>
     <meta charset="UTF-8" />
     <title>Tab</title>
   </head>
