--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         </p>
       </div>
       <div class="video-container">
-        <video src="stock.mp4"></video>
+        <video controls>
+          <source src="stock.mp4" type="video/mp4" />
+        </video>
       </div>
     </div>
     <div class="container" style="background-color: lightblue">
